[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Chess Board/start_button_normal.png" type="Texture" id=2]
[ext_resource path="res://Assets/Chess Board/start_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Game.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/Futura Extra Black font.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Chess Board/quit_button_normal.png" type="Texture" id=7]
[ext_resource path="res://Assets/Chess Board/quit_button_pressed.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 700
font_data = ExtResource( 6 )

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 1170.0
margin_top = 1093.0
margin_right = 1298.0
margin_bottom = 1157.0
rect_scale = Vector2( 2, 2 )
keep_pressed_outside = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 1170.0
margin_top = 1288.0
margin_right = 1298.0
margin_bottom = 1352.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="OptionsButton" type="TextureButton" parent="."]
margin_left = 51.0
margin_top = 489.0
margin_right = 111.0
margin_bottom = 549.0

[node name="Board" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 102.0
margin_top = 224.0
margin_right = 2554.0
margin_bottom = 1080.0
custom_fonts/normal_font = SubResource( 1 )
text = "CHESS"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
